Add a title and description to the homepage.

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-slate
+title: Welcome to Henry's homepage!
+descciption: I am a student in Golden Gate University. This page will contain projects in my courses.
