--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,5 @@ url: https://chiwalau.github.io/Data-104/
 author: Henry Lau
 plugins:
   - jekyll-seo-tag
-google_analytics:'UA-179014550-1'
+google_analytics:
+'UA-179014550-1'
